update src to support signum. (copied from old account)

--- a/src/main/resources/templates/init.html
+++ b/src/main/resources/templates/init.html
@@ -7,6 +7,6 @@
     </head>
 
     <body>
-        <h1>Burstcoin-Faucet is currently initializing, please be patient ...</h1>
+        <h1>Signum-Faucet is currently initializing, please be patient ...</h1>
     </body>
 </html>
